--- a/components/juqn2hn7r-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/juqn2hn7r-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: juqn2hn7r-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-b83dc586f6.6l52.p3.openshiftapps.com/rhtap/rhtap-qe-nodejs:e577e87308939e27e6887471f77b23bf94aa561f@sha256:61b81c5c1a29235f4973e68f8511d1c17cc53641ec36ac25c7b94887958cda38
+          name: container-image
